Fix affichage labels classification